src/test/deca/context/invalid/ifthenCondition1.deca
// Description:
//    condition if must be a boolean
//
// Resultats:
//    Condition type is not a boolean
// 
// Historique:
//    cree le 01/01/2022

{
    if(){
        
    }

}